Fix responsiveness on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -339,7 +339,7 @@ main {
 
 .sidebar {
   margin-bottom: 15px;
-  max-height: 112px;
+  max-height: 180px;
   overflow: hidden;
   transition: var(--transition-2);
 }
